<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeFragment">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_130dp"
        android:contentDescription="@string/logo_content_desc"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_welcome"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/welcome_image"
        android:src="@drawable/img_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_logo" />

    <TextView
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pridi"
        android:text="@string/app_tagline"
        android:textAlignment="center"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/font_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_welcome" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnStarted"
        style="@style/ActionButton"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:layout_marginBottom="@dimen/dimen_32dp"
        android:text="@string/action_started"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/img_welcome"
        app:layout_constraintStart_toStartOf="@id/img_welcome" />


</androidx.constraintlayout.widget.ConstraintLayout>