<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapsingToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryBlue"
                    android:fitsSystemWindows="true"
                    app:contentScrim="@color/colorPrimaryBlue"
                    app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">


                    <ImageView
                        android:id="@+id/result_image"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_200dp"
                        android:layout_margin="@dimen/dimen_32dp"
                        android:scaleType="centerCrop"
                        app:layout_collapseMode="parallax"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/result_text"
                        app:srcCompat="@drawable/ic_place_holder" />

                    <ImageButton
                        android:id="@+id/back_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_back"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:padding="@dimen/dimen_16dp"
                        app:layout_collapseMode="pin"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </com.google.android.material.appbar.CollapsingToolbarLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-25dp"
                android:background="@drawable/bg_content"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/llContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/result_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_24dp"
                        android:layout_marginTop="@dimen/dimen_24dp"
                        android:text="@string/result"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/llContent" />

                    <TextView
                        android:id="@+id/tv_confidence_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="32dp"
                        android:textAlignment="textEnd"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:text="98%"
                        tools:text="98%"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/result_text" />

                    <TextView
                        android:id="@+id/tv_result_scanning"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_24dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/label_result_scanning"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryBlue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/result_text" />

                    <TextView
                        android:id="@+id/tv_result_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dimen_24dp"
                        android:layout_marginTop="@dimen/dimen_4dp"
                        android:text="@string/label_result_description"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_result_scanning" />

                    <TextView
                        android:id="@+id/tv_action_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_24dp"
                        android:layout_marginTop="@dimen/dimen_24dp"
                        android:text="@string/apa_yang_harus_dilakukan"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_result_description" />

                    <LinearLayout
                        android:id="@+id/action_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_24dp"
                        android:layout_marginTop="@dimen/dimen_8dp"
                        android:layout_marginEnd="@dimen/dimen_24dp"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_action_title">

                        <TextView
                            android:id="@+id/tv_suggestion_items"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/label_suggestion_items"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:layout_marginTop="8dp" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>